--- a/index.html
+++ b/index.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.css' integrity='sha512-1hsteeq9xTM5CX6NsXiJu3Y/g+tj+IIwtZMtTisemEv3hx+S9ngaW4nryrNcPM4xGzINcKbwUJtojslX2KG+DQ==' crossorigin='anonymous'/>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+
+    <link rel="stylesheet" href="./style/style.css">
+    <title>ToDo List</title>
 </head>
 <body>
+
+    <div id="app">
+        <div class="container">
+
+            
+            <div class="input-section">
+                <h1>ToDo List</h1>
+                <input type="text" placeholder="New ToDo">
+                <button>Submit</button>
+            </div>
+
+            <div class="list-section">
+
+                <ul>
+
+                    <li 
+                        v-for="(todo, done) in todos"
+                        :class="todo.done === true ? 'done-todo': ''"
+                    >
+
+                        {{todo.title}}
+                        <i class="fa-solid fa-xmark fa-2x"></i>
+                    </li>
+
+                </ul>
+
+            </div>
+            <p>Made with &hearts; by Agostino Pique</p>
+
+        </div>
+    </div>
     
+    <script src="./js/script.js"></script>
 </body>
 </html>
